--- a/.github/workflows/wrkfl.yml
+++ b/.github/workflows/wrkfl.yml
@@ -52,5 +52,5 @@ jobs:
       - name: Deploy
         run: railway up
         env:
-          RAILWAY_TOKEN: ${{ secrets.ACTIONS_RAILWAY-TEST }}
+          RAILWAY_TOKEN: ${{ secrets.RAILWAY_TEST }}
 
